# acrcloud_scan_files_python3

./: .gitignore  Dockerfile  README.md  config.yaml.example  gui.py  main.py  pyproject.toml  requirements.txt
acrcloudscan/: main.py
acrcloudscan/acrscan/: __init__.py  lib_downloader.py  utils.py
acrcloudscan/acrscan/acrcloud/: __init__.py  recognizer.py
acrcloudscan/acrscan/models/: __init__.py  base_model.py
acrscan/: acrscan.py  lib_downloader.py  utils.py
acrscan/acrcloud/: __init__.py  recognizer.py
acrscan/models/: base_model.py  config.py
